--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = [{ name = "Thiago Henrique", email = "thiagohdeplima@gmail.com" }]
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.11,<3.12"
 dependencies = [
     "yfinance (>=0.2.63,<0.3.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
