--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ dependencies = [
     "yfinance (>=0.2.63,<0.3.0)",
     "uvicorn (>=0.35.0,<0.36.0)",
     "fastapi (>=0.116.1,<0.117.0)",
+    "pandas (>=2.3.1,<3.0.0)",
+    "matplotlib (>=3.10.3,<4.0.0)",
+    "scikit-learn (>=1.7.1,<2.0.0)",
+    "tensorflow (>=2.19.0,<3.0.0)",
 ]
 
 [tool.poetry]
